Stas: Fixes to UI tweaks branch (#28)
* fix: fixing all the broken layouts

* chore: changing favicon, small UI fixes

* fix: fixing borders

* make sure username doesn't overflow in manage users modal, fix loader on search users

---------

--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,8 @@ textarea:not(:focus) ~ label::after {
 #message-text > a {
   text-decoration: underline;
 }
+
+input::placeholder {
+  font-size: 0.875rem;
+  color: #607D8A !important;
+}
